@@ -1,6 +1,6 @@
 /*
  * Aipo is a groupware program developed by Aimluck,Inc.
- * Copyright (C) 2004-2011 Aimluck,Inc.
+ * Copyright (C) 2004-2015 Aimluck,Inc.
  * http://www.aipo.com
  *
  * This program is free software: you can redistribute it and/or modify
@@ -16,7 +16,6 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
 package com.aimluck.eip.account;
 
 import java.security.SecureRandom;
@@ -36,7 +35,10 @@ import org.apache.jetspeed.services.logging.JetspeedLogger;
 import org.apache.turbine.util.RunData;
 import org.apache.velocity.context.Context;
 
+import com.aimluck.commons.field.ALStringField;
+import com.aimluck.commons.utils.ALStringUtil;
 import com.aimluck.eip.account.util.AccountUtils;
+import com.aimluck.eip.account.util.AccountUtils.FilterRole;
 import com.aimluck.eip.cayenne.om.account.EipMUserPosition;
 import com.aimluck.eip.cayenne.om.security.TurbineGroup;
 import com.aimluck.eip.cayenne.om.security.TurbineUser;
@@ -56,7 +58,7 @@ import com.aimluck.eip.util.ALEipUtils;
 
 /**
  * ユーザーアカウントの検索データを管理するためのクラスです。 <br />
- * 
+ *
  */
 public class AccountUserSelectData extends
     ALAbstractSelectData<TurbineUser, ALBaseUser> {
@@ -66,15 +68,25 @@ public class AccountUserSelectData extends
     .getLogger(AccountUserSelectData.class.getName());
 
   /** 現在表示している部署 */
-  private String currentPost;
+  protected String currentPost = "";
 
-  private int registeredUserNum = 0;
+  /** 現在表示しているユーザー */
+  protected String currentRole = "";
+
+  protected int registeredUserNum = 0;
+
+  protected static final String LIST_FILTER_ROLE = "filter_role";
+
+  protected final String LIST_FILTER_ROLE_STR = new StringBuffer().append(
+    this.getClass().getName()).append(LIST_FILTER_ROLE).toString();
 
   private boolean adminFilter;
 
+  protected ALStringField target_keyword;
+
   /**
    * 初期化します。
-   * 
+   *
    */
   @Override
   public void init(ALAction action, RunData rundata, Context context)
@@ -83,12 +95,21 @@ public class AccountUserSelectData extends
     if (sort == null || sort.equals("")) {
       ALEipUtils.setTemp(rundata, context, LIST_SORT_STR, "userposition");
     }
+
+    if (rundata.getParameters().containsKey(LIST_FILTER_ROLE)) {
+      ALEipUtils.setTemp(rundata, context, LIST_FILTER_ROLE_STR, rundata
+        .getParameters()
+        .getString(LIST_FILTER_ROLE));
+    }
+
+    target_keyword = new ALStringField();
+
     super.init(action, rundata, context);
   }
 
   /**
    * アカウント一覧を取得します。 ただし、論理削除されているアカウントは取得しません。
-   * 
+   *
    * @param rundata
    * @param context
    * @return
@@ -97,6 +118,7 @@ public class AccountUserSelectData extends
   protected ResultList<TurbineUser> selectList(RunData rundata, Context context) {
     try {
       // 登録済みのユーザ数をデータベースから取得
+      target_keyword.setValue(AccountUtils.getTargetKeyword(rundata, context));
 
       SelectQuery<TurbineUser> query = getSelectQuery(rundata, context);
       buildSelectQueryForListView(query);
@@ -104,6 +126,7 @@ public class AccountUserSelectData extends
       ResultList<TurbineUser> list = query.getResultList();
 
       registeredUserNum = list.getTotalCount();
+
       return list;
     } catch (Exception ex) {
       logger.error("AccountUserSelectData.selectList", ex);
@@ -113,7 +136,7 @@ public class AccountUserSelectData extends
 
   /**
    * 検索条件を設定した SelectQuery を返します。 <BR>
-   * 
+   *
    * @param rundata
    * @param context
    * @return
@@ -123,74 +146,181 @@ public class AccountUserSelectData extends
 
     ObjectId oid =
       new ObjectId("TurbineUser", TurbineUser.USER_ID_PK_COLUMN, 3);
-    Expression exp1 =
+
+    Expression exp_base =
       ExpressionFactory.matchAllDbExp(
         oid.getIdSnapshot(),
         Expression.GREATER_THAN);
 
     SelectQuery<TurbineUser> query =
-      Database.query(TurbineUser.class, exp1).where(
+      Database.query(TurbineUser.class, exp_base).where(
         Operations.eq(TurbineUser.COMPANY_ID_PROPERTY, Integer.valueOf(1)),
         Operations.ne(TurbineUser.DISABLED_PROPERTY, "T"));
 
     String filter = ALEipUtils.getTemp(rundata, context, LIST_FILTER_STR);
-    String filtertype =
-      ALEipUtils.getTemp(rundata, context, LIST_FILTER_TYPE_STR);
-    current_filter = filter;
+    String filter_role =
+      ALEipUtils.getTemp(rundata, context, LIST_FILTER_ROLE_STR);
+    currentPost = filter;
+    currentRole = filter_role;
 
-    Map<Integer, ALEipPost> gMap = ALEipManager.getInstance().getPostMap();
-    if ("role".equals(filtertype) && "admin".equals(filter)) {
-      try {
-        Group group = JetspeedSecurity.getGroup("LoginUser");
-        Role adminrole = JetspeedSecurity.getRole("admin");
-        List<TurbineUserGroupRole> admins =
-          Database
-            .query(TurbineUserGroupRole.class)
-            .where(
-              Operations.eq(
-                TurbineUserGroupRole.TURBINE_ROLE_PROPERTY,
-                adminrole.getId()),
-              Operations.eq(TurbineUserGroupRole.TURBINE_GROUP_PROPERTY, group
-                .getId()),
-              Operations.ne(TurbineUserGroupRole.TURBINE_USER_PROPERTY, 1))
-            .distinct(true)
-            .fetchList();
-        List<Integer> admin_ids = new ArrayList<Integer>();
-        admin_ids.add(Integer.valueOf(1));
-        for (TurbineUserGroupRole tugr : admins) {
-          admin_ids.add(tugr.getTurbineUser().getUserId());
-        }
-        query.andQualifier(ExpressionFactory.inDbExp(
-          TurbineUser.USER_ID_PK_COLUMN,
-          admin_ids));
-      } catch (Exception ex) {
-        logger.error("AccountUserSelectData.getSelectQuery", ex);
+    if (target_keyword != null && !target_keyword.getValue().equals("")) {
+      String transWord =
+        ALStringUtil.convertHiragana2Katakana(ALStringUtil
+          .convertH2ZKana(target_keyword.getValue()));
+      transWord = transWord.replace("　", "").replace(" ", ""); // 全角/半角スペースを削除
+      String[] transWords = transWord.split(""); // 1文字ずつに分解
+
+      for (int i = 0; i < transWords.length; i++) {
+        Expression exp11 =
+          ExpressionFactory.likeExp(TurbineUser.FIRST_NAME_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp12 =
+          ExpressionFactory.likeExp(TurbineUser.LAST_NAME_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp13 =
+          ExpressionFactory.likeExp(TurbineUser.FIRST_NAME_KANA_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp14 =
+          ExpressionFactory.likeExp(TurbineUser.LAST_NAME_KANA_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp15 =
+          ExpressionFactory.likeExp(TurbineUser.EMAIL_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp16 =
+          ExpressionFactory.likeExp(
+            TurbineUser.TURBINE_USER_GROUP_ROLE_PROPERTY
+              + "."
+              + TurbineUserGroupRole.TURBINE_GROUP_PROPERTY
+              + "."
+              + TurbineGroup.GROUP_ALIAS_NAME_PROPERTY,
+            "%" + target_keyword.getValue() + "%");
+        Expression exp17 =
+          ExpressionFactory.likeExp(TurbineUser.LOGIN_NAME_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp21 =
+          ExpressionFactory.likeExp(TurbineUser.OUT_TELEPHONE_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp22 =
+          ExpressionFactory.likeExp(TurbineUser.IN_TELEPHONE_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp23 =
+          ExpressionFactory.likeExp(TurbineUser.CELLULAR_PHONE_PROPERTY, "%"
+            + target_keyword.getValue()
+            + "%");
+        Expression exp31 =
+          ExpressionFactory.likeExp(TurbineUser.FIRST_NAME_PROPERTY, "%"
+            + transWords[i]
+            + "%");
+        Expression exp32 =
+          ExpressionFactory.likeExp(TurbineUser.LAST_NAME_PROPERTY, "%"
+            + transWords[i]
+            + "%");
+        Expression exp33 =
+          ExpressionFactory.likeExp(TurbineUser.FIRST_NAME_KANA_PROPERTY, "%"
+            + transWords[i]
+            + "%");
+        Expression exp34 =
+          ExpressionFactory.likeExp(TurbineUser.LAST_NAME_KANA_PROPERTY, "%"
+            + transWords[i]
+            + "%");
+        Expression exp35 =
+          ExpressionFactory.likeExp(
+            TurbineUser.TURBINE_USER_GROUP_ROLE_PROPERTY
+              + "."
+              + TurbineUserGroupRole.TURBINE_GROUP_PROPERTY
+              + "."
+              + TurbineGroup.GROUP_ALIAS_NAME_PROPERTY,
+            "%" + transWords[i] + "%");
+
+        query.andQualifier(exp11.orExp(exp12).orExp(exp13).orExp(exp14).orExp(
+          exp15).orExp(exp16).orExp(exp17).orExp(exp21).orExp(exp22).orExp(
+          exp23).orExp(exp31).orExp(exp32).orExp(exp33).orExp(exp34).orExp(
+          exp35));
       }
-      return query;
-    } else if (!"post".equals(filtertype)
-      || filter == null
-      || "".equals(filter)
-      || !gMap.containsKey(Integer.valueOf(filter))) {
-      return query;
     }
 
-    String groupName =
-      (ALEipManager.getInstance().getPostMap().get(Integer.valueOf(filter)))
-        .getGroupName()
-        .getValue();
+    // ユーザーの状態によるフィルターが指定されている場合。
+    if (filter_role != null && !filter_role.equals("")) {
 
-    query.where(Operations.eq(TurbineUser.TURBINE_USER_GROUP_ROLE_PROPERTY
-      + "."
-      + TurbineUserGroupRole.TURBINE_GROUP_PROPERTY
-      + "."
-      + TurbineGroup.GROUP_NAME_PROPERTY, groupName));
+      // 管理者かどうか
+      if (filter_role.equals(AccountUtils.ROLE_ADMIN.toString())) {
+        try {
+          Group group = JetspeedSecurity.getGroup("LoginUser");
+          Role adminrole = JetspeedSecurity.getRole("admin");
+          List<TurbineUserGroupRole> admins =
+            Database
+              .query(TurbineUserGroupRole.class)
+              .where(
+                Operations.eq(
+                  TurbineUserGroupRole.TURBINE_ROLE_PROPERTY,
+                  adminrole.getId()),
+                Operations.eq(
+                  TurbineUserGroupRole.TURBINE_GROUP_PROPERTY,
+                  group.getId()),
+                Operations.ne(TurbineUserGroupRole.TURBINE_USER_PROPERTY, 1))
+              .distinct(true)
+              .fetchList();
+          List<Integer> admin_ids = new ArrayList<Integer>();
+          admin_ids.add(Integer.valueOf(1));
+          for (TurbineUserGroupRole tugr : admins) {
+            admin_ids.add(tugr.getTurbineUser().getUserId());
+          }
+          query.andQualifier(ExpressionFactory.inDbExp(
+            TurbineUser.USER_ID_PK_COLUMN,
+            admin_ids));
+
+        } catch (Exception ex) {
+          logger.error("AccountUserSelectData.getSelectQuery", ex);
+        }
+
+      }
+
+      // 有効ユーザーかどうか
+      if (filter_role.equals(AccountUtils.ROLE_ACTIVE.toString())) {
+        query.andQualifier(ExpressionFactory.matchExp(
+          TurbineUser.DISABLED_PROPERTY,
+          "F"));
+      }
+
+      // 有効ユーザーかどうか
+      if (filter_role.equals(AccountUtils.ROLE_IN_ACTIVE.toString())) {
+        query.andQualifier(ExpressionFactory.matchExp(
+          TurbineUser.DISABLED_PROPERTY,
+          "N"));
+      }
+    }
+
+    // 部署によるフィルターが指定されている場合。
+    if (filter != null && !filter.equals("")) {
+
+      String groupName =
+        (ALEipManager.getInstance().getPostMap().get(Integer.valueOf(filter)))
+          .getGroupName()
+          .getValue();
+
+      query.where(Operations.eq(TurbineUser.TURBINE_USER_GROUP_ROLE_PROPERTY
+        + "."
+        + TurbineUserGroupRole.TURBINE_GROUP_PROPERTY
+        + "."
+        + TurbineGroup.GROUP_NAME_PROPERTY, groupName));
+    }
+
+    query.distinct();
 
     return query;
   }
 
   /**
    * フィルタ用の <code>Criteria</code> を構築します。
-   * 
+   *
    * @param crt
    * @param rundata
    * @param context
@@ -201,6 +331,8 @@ public class AccountUserSelectData extends
       SelectQuery<TurbineUser> query, RunData rundata, Context context) {
     // 指定部署IDの取得
     String filter = ALEipUtils.getTemp(rundata, context, LIST_FILTER_STR);
+    String filter_role =
+      ALEipUtils.getTemp(rundata, context, LIST_FILTER_ROLE_STR);
 
     // 指定部署が存在しているかを確認し、存在していなければ値を削除する
     Map<Integer, ALEipPost> gMap = ALEipManager.getInstance().getPostMap();
@@ -224,13 +356,14 @@ public class AccountUserSelectData extends
 
     Expression exp = ExpressionFactory.matchDbExp(crt_key, filter);
     query.andQualifier(exp);
-    current_filter = filter;
-    current_filter_type = filter_type;
+
+    currentPost = filter;
+    currentRole = filter_role;
     return query;
   }
 
   /**
-   * 
+   *
    * @param id
    * @return
    */
@@ -248,7 +381,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @param id
    * @return
    */
@@ -275,7 +408,7 @@ public class AccountUserSelectData extends
   /**
    * @param obj
    * @return
-   * 
+   *
    */
   @Override
   protected Object getResultData(TurbineUser record) {
@@ -313,7 +446,7 @@ public class AccountUserSelectData extends
   @Override
   protected Object getResultDataDetail(ALBaseUser record) {
     try {
-      Integer id = new Integer(record.getUserId());
+      Integer id = Integer.valueOf(record.getUserId());
 
       AccountResultData rd = new AccountResultData();
       rd.initField();
@@ -350,7 +483,7 @@ public class AccountUserSelectData extends
 
   /**
    * @return
-   * 
+   *
    */
   @Override
   protected Attributes getColumnMap() {
@@ -365,7 +498,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @return
    */
   public String getCurrentPost() {
@@ -373,7 +506,7 @@ public class AccountUserSelectData extends
   }
 
   /**
-   * 
+   *
    * @return
    */
   public Map<Integer, ALEipPost> getPostMap() {
@@ -381,8 +514,16 @@ public class AccountUserSelectData extends
   }
 
   /**
+   *
+   * @return
+   */
+  public Map<Integer, FilterRole> getRoleMap() {
+    return AccountUtils.getRoleMap();
+  }
+
+  /**
    * 登録ユーザー数を取得する．
-   * 
+   *
    * @return
    */
   public int getRegisteredUserNum() {
@@ -396,5 +537,16 @@ public class AccountUserSelectData extends
 
   public boolean isAdminFiltered() {
     return adminFilter;
+  }
+
+  /**
+   * @return currentRole
+   */
+  public String getCurrentRole() {
+    return currentRole;
+  }
+
+  public ALStringField getTargetKeyword() {
+    return target_keyword;
   }
 }
