@@ -1,6 +1,6 @@
 /*
  * Aipo is a groupware program developed by Aimluck,Inc.
- * Copyright (C) 2004-2011 Aimluck,Inc.
+ * Copyright (C) 2004-2015 Aimluck,Inc.
  * http://www.aipo.com
  *
  * This program is free software: you can redistribute it and/or modify
@@ -16,11 +16,11 @@
  * You should have received a copy of the GNU Affero General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
 package com.aimluck.eip.timeline;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.ArrayList;
@@ -57,10 +57,11 @@ import com.aimluck.eip.services.timeline.ALTimelineHandler;
 import com.aimluck.eip.timeline.util.TimelineUtils;
 import com.aimluck.eip.util.ALEipUtils;
 import com.aimluck.eip.util.ALLocalizationUtils;
+import com.aimluck.eip.util.ALURLConnectionUtils;
 
 /**
  * タイムライントピックのフォームデータを管理するクラスです。 <BR>
- * 
+ *
  */
 public class TimelineFormData extends ALAbstractFormData {
 
@@ -99,12 +100,12 @@ public class TimelineFormData extends ALAbstractFormData {
   private String folderName = null;
 
   /**
-   * 
+   *
    * @param action
    * @param rundata
    * @param context
-   * 
-   * 
+   *
+   *
    */
   @Override
   public void init(ALAction action, RunData rundata, Context context)
@@ -120,8 +121,8 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * 各フィールドを初期化します。 <BR>
-   * 
-   * 
+   *
+   *
    */
   @Override
   public void initField() {
@@ -136,8 +137,8 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * タイムラインの各フィールドに対する制約条件を設定します。 <BR>
-   * 
-   * 
+   *
+   *
    */
   @Override
   protected void setValidator() {
@@ -149,10 +150,10 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * トピックのフォームに入力されたデータの妥当性検証を行います。 <BR>
-   * 
+   *
    * @param msgList
    * @return TRUE 成功 FALSE 失敗
-   * 
+   *
    */
   @Override
   protected boolean validate(List<String> msgList) {
@@ -161,7 +162,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * トピックをデータベースから削除します。 <BR>
-   * 
+   *
    * @param rundata
    * @param context
    * @param msgList
@@ -207,7 +208,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * トピックをデータベースに格納します。 <BR>
-   * 
+   *
    * @param rundata
    * @param context
    * @param msgList
@@ -237,18 +238,21 @@ public class TimelineFormData extends ALAbstractFormData {
         EipTTimeline parent =
           Database.get(EipTTimeline.class, Integer.valueOf(parentId));
 
-        if (parent
-          .getTimelineType()
-          .equals(EipTTimeline.TIMELINE_TYPE_TIMELINE)) {// 通常のコメント挿入時
-          parent.setUpdateDate(tCal.getTime());
-        } else if (parent.getTimelineType().equals(
-          EipTTimeline.TIMELINE_TYPE_ACTIVITY)) {
-          parent.setUpdateDate(tCal.getTime());
-          if (parent.getParentId().intValue() != 0) {
-            EipTTimeline grandpa =
-              Database.get(EipTTimeline.class, parent.getParentId());
-            grandpa.setUpdateDate(tCal.getTime());
+        if (parent != null && parent.getTimelineType() != null) {
+          if (EipTTimeline.TIMELINE_TYPE_TIMELINE.equals(parent
+            .getTimelineType())) {// 通常のコメント挿入時
+            parent.setUpdateDate(tCal.getTime());
+          } else if (EipTTimeline.TIMELINE_TYPE_ACTIVITY.equals(parent
+            .getTimelineType())) {
+            parent.setUpdateDate(tCal.getTime());
+            if (parent.getParentId().intValue() != 0) {
+              EipTTimeline grandpa =
+                Database.get(EipTTimeline.class, parent.getParentId());
+              grandpa.setUpdateDate(tCal.getTime());
+            }
           }
+        } else {
+          return false;
         }
 
       } else if (ALEipUtils.getParameter(rundata, context, "tlClipUrl") != null
@@ -258,16 +262,33 @@ public class TimelineFormData extends ALAbstractFormData {
         EipTTimelineUrl url = Database.create(EipTTimelineUrl.class);
 
         if (ALEipUtils.getParameter(rundata, context, "tlClipImage") != null) {
-          String str = ALEipUtils.getParameter(rundata, context, "tlClipImage");
-          URL u = new URL(str);
-          URLConnection uc = u.openConnection();
-          uc.setRequestProperty("Referer", str); // Refererを記述
-          InputStream is = uc.getInputStream();
-          url.setThumbnail(FileuploadUtils.getBytesShrink(
-            is,
-            FileuploadUtils.DEF_THUMBNAIL_WIDTH,
-            FileuploadUtils.DEF_THUMBNAIL_HEIGHT,
-            msgList));
+          try {
+            String str =
+              ALEipUtils.getParameter(rundata, context, "tlClipImage");
+            str = str.replaceAll("\\n", "");
+            URI uri = new URI(str).normalize();
+            String path =
+              uri.getPath().replaceAll("\\.\\./", "").replaceAll("\\./", "");
+            URL u =
+              new URL(String.format("%s://%s%s", uri.getScheme(), uri
+                .getAuthority(), path));
+
+            URLConnection uc = ALURLConnectionUtils.openUrlConnection(u);
+            uc.setRequestProperty("Referer", str); // Refererを記述
+            uc
+              .addRequestProperty("User-Agent", ALURLConnectionUtils.USER_AGENT);
+            uc.addRequestProperty(
+              "Accept-Encoding",
+              ALURLConnectionUtils.ACCEPT_ENCODING);
+            InputStream is = uc.getInputStream();
+            url.setThumbnail(FileuploadUtils.getBytesShrink(
+              is,
+              FileuploadUtils.DEF_THUMBNAIL_WIDTH,
+              FileuploadUtils.DEF_THUMBNAIL_HEIGHT,
+              msgList));
+          } catch (Exception e) { // サムネイルの取得に失敗した場合、サムネイルなしで投稿
+            logger.error("timeline", e);
+          }
         }
 
         if (ALEipUtils.getParameter(rundata, context, "tlClipTitle") != null) {
@@ -309,6 +330,27 @@ public class TimelineFormData extends ALAbstractFormData {
           parententry,
           loginName,
           targetLoginName);
+
+        List<Integer> otherlist =
+          TimelineUtils.getTimelineOtherCommentUserList(Integer
+            .valueOf(parentId));
+        for (Integer owner_id : otherlist) {
+          int parentOwnerId = parententry.getOwnerId();
+          String targetUserName =
+            ALEipUtils
+              .getALEipUser(parententry.getOwnerId())
+              .getAliasName()
+              .toString();
+          if (owner_id != parentOwnerId) {
+            String otherLoginName =
+              ALEipUtils.getALEipUser(owner_id).getName().getValue();
+            TimelineUtils.createNewOtherCommentActivity(
+              parententry,
+              loginName,
+              otherLoginName,
+              targetUserName);
+          }
+        }
       }
 
       ALTimelineFactoryService tlservice =
@@ -321,13 +363,15 @@ public class TimelineFormData extends ALAbstractFormData {
       ALEventlogFactoryService.getInstance().getEventlogHandler().log(
         topic.getTimelineId(),
         ALEventlogConstants.PORTLET_TYPE_TIMELINE,
-        topic.getCreateDate().toString());
+        TimelineUtils.compressString(note.getValue()));
 
     } catch (RuntimeException ex) {
       // RuntimeException
+      Database.rollback();
       logger.error("timeline", ex);
       return false;
     } catch (Exception ex) {
+      Database.rollback();
       logger.error("timeline", ex);
       return false;
     }
@@ -431,7 +475,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * データベースに格納されているトピックを更新します。 <BR>
-   * 
+   *
    * @param rundata
    * @param context
    * @param msgList
@@ -444,7 +488,7 @@ public class TimelineFormData extends ALAbstractFormData {
   }
 
   /**
-   * 
+   *
    * @param rundata
    * @param context
    * @param msgList
@@ -483,7 +527,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * メモを取得します。 <BR>
-   * 
+   *
    * @return
    */
   public ALStringField getNote() {
@@ -507,7 +551,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * アクセス権限チェック用メソッド。 アクセス権限の機能名を返します。
-   * 
+   *
    * @return
    */
   @Override
@@ -521,7 +565,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * 他ユーザのトピックを編集する権限があるかどうかを返します。
-   * 
+   *
    * @return
    */
   public boolean hasAclUpdateTopicOthers() {
@@ -530,7 +574,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * 他ユーザのトピックを削除する権限があるかどうかを返します。
-   * 
+   *
    * @return
    */
   public boolean hasAclDeleteTopicOthers() {
@@ -538,7 +582,7 @@ public class TimelineFormData extends ALAbstractFormData {
   }
 
   /**
-   * 
+   *
    * @param bool
    */
   public void setHasPhoto(boolean bool) {
@@ -555,7 +599,7 @@ public class TimelineFormData extends ALAbstractFormData {
 
   /**
    * タイムラインで使用したセッション情報を消去する．
-   * 
+   *
    */
   public void clearTimelineSession(RunData rundata, Context context) {
     List<String> list = new ArrayList<String>();
